--- a/Assignment_5/qn2.css
+++ b/Assignment_5/qn2.css
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Card Layout</title>
-  <link rel="stylesheet" href="css1.css">
+  <link rel="stylesheet" href="qn2.css">
 </head>
 <body>
   <div class="card-container">
